--- a/VisualAlgo/public/src/app/app.component.html
+++ b/VisualAlgo/public/src/app/app.component.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 style="display: inline-block">hi</h1>
+  <h1 style="display: inline-block">Welcome to VisualAlgo</h1>
+  <br>
 
   <select (change)="changeAlgo($event)">
     <option [routerLink]="['/bubble']">Bubble</option>
