--- a/VisualAlgo/public/src/app/app.component.css
+++ b/VisualAlgo/public/src/app/app.component.css
@@ -17,7 +17,20 @@ select{
 }
 .header{
     border-bottom: 2px solid black;
-    background-color: #6600cc;
+    background-color: #007399;
     padding: 20px;
-    
+    height: 50px;
+    width: 100vw;
+}
+
+.home{
+    position: absolute;
+    left: 50px;
+    top: 38px;
+    height: 25px;
+    width: 40px;
+    border-radius: 5px;
+}
+a{
+    text-decoration: none;
 }
