--- a/VisualAlgo/public/src/app/bubble-sort/bubble-sort.component.html
+++ b/VisualAlgo/public/src/app/bubble-sort/bubble-sort.component.html
@@ -1,2 +1,2 @@
-<button (click) = "onShuffle()">shuffle</button>
+<button (click) = "onShuffle()">Shuffle</button>
 <button (click)="onClick()">Run</button>
