--- a/VisualAlgo/public/src/app/app.component.html
+++ b/VisualAlgo/public/src/app/app.component.html
@@ -18,6 +18,7 @@
     <option [routerLink]="['/insertion']">Insertion</option>
     <option [routerLink]="['/selection']">Selection</option>
     <option [routerLink]="['/cocktail']">Cocktail</option>
+    <option [routerLink]="['/quick']">Quick</option>
   </select>
   <router-outlet></router-outlet>
 </body>
