fixed styling on canvas and added about component

--- a/VisualAlgo/public/src/app/home/home.component.css
+++ b/VisualAlgo/public/src/app/home/home.component.css
@@ -24,4 +24,11 @@ p{
 .VisualAlgo{
     height: 350px;
     width: 350px;
+    
 }
+
+.VisualAlgo:hover{
+    height: 375px;
+    width: 375px;
+}
+
