--- a/VisualAlgo/public/src/app/home/home.component.html
+++ b/VisualAlgo/public/src/app/home/home.component.html
@@ -5,6 +5,7 @@
         <br>
         <p>VirtualAlgo is a site designed to visualize sorting algorithms. We know that these algorithms can be difficult to visualize, we here at VisualAlgo hope to bridge the gap between what we write and how we see it</p>
     </div>
-    <img class="VisualAlgo" src="assets/img/VisualAlgo.png">
+    <div class="image">
+        <a href="/about"><img class="VisualAlgo" src="assets/img/VisualAlgo.png"></a>
+    </div>
 </div>
-!
