added maxheap sort

--- a/VisualAlgo/public/src/app/app.component.html
+++ b/VisualAlgo/public/src/app/app.component.html
@@ -20,6 +20,7 @@
         <option [routerLink]="['/selection']">Selection</option>
         <option [routerLink]="['/cocktail']">Cocktail</option>
         <option [routerLink]="['/quick']">Quick</option>
+        <option [routerLink]="['/maxheap']">Max Heap</option>
       </select>
     
   </div>
